[tool.poetry]
name = "kataomoi"
version = "0.1.0"
description = ""
authors = ["akira <asa.shakira340@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.scripts]
kataomoi = "kataomoi.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"
